--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
-        "bootstrap-icons": "^1.8.1"
+        "bootstrap-icons": "^1.8.1",
+        "font-awesome": "^4.7.0"
     }
 }
